--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,8 @@ cortex-m-rt = '~0.7.3'
 embedded-hal = '^1.0.0'
 
 panic-probe = { version = '~0.3.2', features = ['print-defmt'] }
+
+[profile.release]
+lto = true
+opt-level = 's'
+debug = 2
