--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,13 @@ embedded-hal = '^1.0.0'
 
 panic-probe = { version = '~0.3.2', features = ['print-defmt'] }
 
+[profile.dev]
+opt-level = 1
+lto = true
+
 [profile.release]
 lto = true
-opt-level = 's'
+opt-level = 'z'
 debug = 2
+incremental = false
+codegen-units = 1
