--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
 	"recommendations": [
 		"rust-lang.rust-analyzer",
 		"tamasfe.even-better-toml",
-		"probe-rs.probe-rs-debugger"
+		"probe-rs.probe-rs-debugger",
+		"github.vscode-github-actions"
 	]
 }
