--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,16 +13,30 @@ defmt-rtt = '~0.4.1'
 cortex-m = { version = '~0.7.7', features = ['inline-asm', 'critical-section-single-core'] }
 cortex-m-rt = '~0.7.3'
 embedded-hal = '^1.0.0'
+embedded-hal-async = '^1.0.0'
 
 panic-probe = { version = '~0.3.2', features = ['print-defmt'] }
 
 [profile.dev]
-opt-level = 1
-lto = true
+opt-level = 0
+debug = 2
+split-debuginfo = 'packed'
+strip = false
+debug-assertions = true
+overflow-checks = true
+lto = false
+panic = 'unwind'
+incremental = false
+codegen-units = 1
 
 [profile.release]
-lto = true
 opt-level = 'z'
 debug = 2
+split-debuginfo = 'packed'
+strip = false
+debug-assertions = false
+overflow-checks = false
+lto = true
+panic = 'abort'
 incremental = false
 codegen-units = 1
