--- a/crates/tunepulse/Cargo.toml
+++ b/crates/tunepulse/Cargo.toml
@@ -14,5 +14,6 @@ defmt-rtt.workspace = true
 cortex-m.workspace = true
 cortex-m-rt.workspace = true
 embedded-hal.workspace = true
+embedded-hal-async.workspace = true
 
 panic-probe.workspace = true
